[package]
name = "scheduler"
version = "0.1.2"
edition = "2021"

[dependencies]
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites", default-features = false, features = ["dates"]}
serde = { version = "1.0.216", features = ["derive"] }
tokio= { version = "1.43.0", features = ["time"] }
logger = { git = "https://github.com/P40b0s/logger.git" }
[dev-dependencies]
tokio-test="0.4.4"
tokio= { version = "1.43.0", features = ["macros"] }
